--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-responsive": "^9.0.0-beta.5",
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
     "react-stripe-checkout": "^2.6.3",
@@ -18,6 +19,7 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.5",
     "sass": "^1.45.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
